[package]
name = "kursu"
version = "0.1.0"
edition = "2021"
authors = ["Robert Brunson me@quill.moe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.11" }
serde = { version = "1.0.140" }
chrono = { version = "0.4.19"}
async-trait = { version = "0.1.56"}
lazy_static = {version = "1.4.0" }